# val-ai

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
docs/: charm_director.md  concepts.md  context_shadowing.md  context_switching.md  emotions.md  persona.md  prompting.md  resources.md
resources/scene/novara/: characters.json
resources/scene/verana/: characters.json
scene/novara/: characters.json
scene/verana/: CharacterQuests.csv  CharacterSymbols.csv  CharacterTraits.csv  Characters.csv  InjectionSymbols.csv  WorldLocations.csv  characters.json
tests/: config.py  run_tests.py
tests/engine/: test_config.py  test_grammar.py  test_llamaflow.py  test_read.py
valai/: __main__.py  charming.py  ioutil.py  llamaflow.py  scrape.py
valai/analysis/: summarizer.py
valai/charm/: __main__.py  charmer.py  context.py  database.py  flatdata.py  guidance.py  loader.py  model.py  prompt.py  scene.py  shadow.py  token.py  wizard.py
valai/charm/models/: __init__.py  base.py  character.py  location.py  symbols.py
valai/charming/: wizard.py
valai/engine/: __init__.py  grammar.py  llamaflow.py  output.py
valai/flow/: __init__.py  asyncflow.py  output.py
valai/pinnacle/: archetypes.py  charmer.py  director.py  exception.py  guidance.py  model.py  prompt.py  roster.py  scene.py  symbol.py  token.py  wizard.py
