[tool.poetry]
name = "valai"
version = "0.0.1"
description = ""
authors = ["Martin Bukowski <mbukowski@bmds.us>"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
trafilatura = "^1.6.2"
llama-cpp-python = "^0.2.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
