[tool.poetry]
name = "valai"
version = "0.1.1"
description = ""
authors = ["Martin Bukowski <mbukowski@bmds.us>"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
trafilatura = "^1.6.2"
llama-cpp-python = "^0.2.11"
numpy = {version = "^1.26.1", python = ">=3.10,<3.13"}
pandas = "^2.1.2"
sqlalchemy = "^2.0.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
