[tool.poetry]
name = "valai"
version = "0.1.4"
description = ""
authors = ["Martin Bukowski <mbukowski@bmds.us>"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
trafilatura = "^1.6.2"
numpy = {version = "^1.26.1", python = ">=3.10,<3.13"}
pandas = "^2.1.2"
sqlalchemy = "^2.0.22"
llama-cpp-python = {path = "local/llama-cpp-python", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-mock = "^3.12.0"

[tool.poetry.scripts]
test = "tests.run_tests:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
